--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>IPad mini pro - Mercado Libre</title>
-    <link href="/css/libs/mesh.min.css" rel="stylesheet" >
-    <link href="/css/styles.min.css" rel="stylesheet" >
+    <link href="css/libs/mesh.min.css" rel="stylesheet" >
+    <link href="css/styles.min.css" rel="stylesheet" >
 </head>
 <body>
 <div class="ch-g1 ch-box-lite" itemscope itemtype="http://schema.org/Product">
@@ -53,19 +53,19 @@
                 <div id="myCarousel">
                     <ul>
                         <li>
-                            <img height="78px" src="/images/ipad.jpeg" alt="ipad">
+                            <img height="78px" src="images/ipad.jpeg" alt="ipad">
                         </li>
                         <li>
-                            <img height="78px" src="/images/ipad-pro.jpg" alt="ipad pro">
+                            <img height="78px" src="images/ipad-pro.jpg" alt="ipad pro">
                         </li>
                         <li>
-                            <img height="78px" src="/images/keyboard.jpg" alt="keyboard">
+                            <img height="78px" src="images/keyboard.jpg" alt="keyboard">
                         </li>
                         <li>
-                            <img height="78px" src="/images/ipad.jpeg">
+                            <img height="78px" src="images/ipad.jpeg">
                         </li>
                         <li>
-                            <img height="78px" src="/images/ipad-pro.jpg">
+                            <img height="78px" src="images/ipad-pro.jpg">
                         </li>
 
                     </ul>
@@ -98,9 +98,6 @@
             </div>
     </section>
 </div>
-<script src="/jquery.min.js" ></script>
-<script src="/tiny.min.js" ></script>
-<script src="/ui/chico.min.js" ></script>
-<script src="/js/main.min.js" ></script>
+<script src="js/main.min.js" ></script>
 </body>
 </html>
